<resources>
    <string name="app_name">Chicky</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="social">Social</string>
    <string name="chat">Chat</string>
    <string name="create">Create</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="type_the_title">Type the title</string>
    <string name="add_post">Add post</string>
    <string name="choose_a_video">Choose a video</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">   Dark mode</string>
    <string name="send">Send</string>
    <string name="posts">Posts</string>
    <string name="people">People</string>
    <string name="type_the_description">Type the description</string>
    <string name="video">Video</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="fullname">FullName</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="next">NEXT</string>
    <string name="submit">Submit</string>
    <string name="games">Games</string>
    <string name="sport">Sport</string>
    <string name="music">Music</string>
    <string name="hobbies">Hobbies</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="skills">SKILLS</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="flutter">Flutter</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="createYourResume">Create your Resume</string>
    <string name="mustNotBeEmpty">Must not be empty !</string>
    <string name="checkYourEmail">Check your email !</string>
    <string name="mustBeAtLeast3">Must be at least 3 characters !</string>
    <string name="checkYourAge">Must be between 20 and 50 !</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="logoutTitle">Logout</string>
    <string name="logoutMessage">Are you sure you want to logout ?</string>
    <string name="deleteMessageUniv">Are you sure you want to delete the university %1$s ?</string>
    <string name="deleteMessageComp">Are you sure you want to delete this experience in %1$s ?</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="university_name">University Name</string>
    <string name="delete_my_account">Delete my &#10;Account</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="you_don_t_have_an_account">You don\'t have an account ?</string>
    <string name="write_your_email_here">Write your email here</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWFoZXJhbGkiLCJhIjoiY2wyZXRvMXc5MDQwbzNlbnpod2l3Nm9sMSJ9.HIzNbLYMYAhRFr9c9FxlkQ</string>
</resources>