<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/profilePictureIV"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/titleTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:text="@string/title"
        android:textColor="@color/textPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/deleteConversationButton"
        app:layout_constraintStart_toEndOf="@+id/profilePictureIV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:text="@string/description"
        android:textColor="@color/textPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteConversationButton"
        app:layout_constraintStart_toEndOf="@+id/profilePictureIV" />

    <Button
        android:id="@+id/deleteConversationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@color/transparent"
        android:backgroundTint="@color/background"
        android:drawableEnd="@drawable/ic_delete"
        android:drawablePadding="0dp"
        android:drawableTint="@color/textPrimary"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>