<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".ui.fragments.SearchFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/search_view_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="15dp">

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tooltipText="Type anything !" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/postsTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/posts"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/postsSL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_duration="1000"
                app:shimmer_repeat_mode="restart"
                app:shimmer_shape="linear">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/single_search_shimmer" />

                    <include layout="@layout/single_search_shimmer" />

                    <include layout="@layout/single_search_shimmer" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/postsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/peopleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/people"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/peopleSL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_duration="1000"
                app:shimmer_repeat_mode="restart"
                app:shimmer_shape="linear">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/single_search_shimmer" />

                    <include layout="@layout/single_search_shimmer" />

                    <include layout="@layout/single_search_shimmer" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/peopleRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/musicTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/music"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/musicSL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:shimmer_duration="1000"
                app:shimmer_repeat_mode="restart"
                app:shimmer_shape="linear">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/single_search_shimmer" />

                    <include layout="@layout/single_search_shimmer" />

                    <include layout="@layout/single_search_shimmer" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="0dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>