<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:backgroundTint="@color/dark"
    app:cardCornerRadius="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            app:tint="@color/white" />
    </RelativeLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:background="@drawable/background_gradient_reverted" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_gravity="bottom"
        android:alpha="0.5"
        android:background="@drawable/background_gradient" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:minWidth="0dp"
            android:text=""
            app:icon="@drawable/ic_delete"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reportButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:minWidth="0dp"
            android:text=""
            app:icon="@drawable/ic_report"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="25dp"
        android:orientation="vertical">


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/postTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/postDescriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/description"
            android:textColor="@color/white" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_star"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_star"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_star"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_star"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_star"
                app:tint="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_favorite_border"
                app:tint="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_comment"
                app:tint="@color/white" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>